update aws config part 1

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy Frontend
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -21,9 +21,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-gh
-          environment_name: Dockergh-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
-          region: us-east-1
+          application_name: docker-react
+          environment_name: "docker-react-env"
+          existing_bucket_name: elasticbeanstalk-us-east-2-992382649739
+          region: us-east-2
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
