--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: docker-react
-          environment_name: "docker-react-env"
+          environment_name: docker-react-env
           existing_bucket_name: elasticbeanstalk-us-east-2-992382649739
           region: us-east-2
           version_label: ${{ github.sha }}
