Update deploy.yaml without deployment package

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,4 +26,4 @@ jobs:
           existing_bucket_name: elasticbeanstalk-us-east-2-992382649739
           region: us-east-2
           version_label: ${{ github.sha }}
-          deployment_package: deploy.zip
+          #deployment_package: deploy.zip
