--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,3 +27,4 @@ jobs:
           region: us-east-2
           version_label: 12345
           deployment_package: deploy.zip
+          use_existing_version_if_available: true
